# shortcut-changelog-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pipe.yml  pyproject.toml
.github/workflows/: push-to-docker-hub.yml
shortcut_changelog_generator/: shortcut-changelog-generator.py
src/: main.py
src/helpers/: file.py  git.py  notifier.py  settings.py  shortcut.py  validator.py
src/models/: story.py
